2012-02-03  Miguel de Dios  <miguel.dedios@artica.es>
	
	* pandoradb.sql, extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql: change the
	size of the field "post_process" in the tables "tagente_modulo" and
	"tnetwork_component".
	
	Fixes: #3483814 

2012-02-03  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql,
	  pandoradb.data.postgreSQL.sql,
	  pandoradb.data.oracle.sql: Added a default special_days value
	  to alert templates.

	* pandoradb.sql,
	  pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql,
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql,
	  godmode/agentes/module_manager_editor_common.php,
	  godmode/agentes/configurar_agente.php,
	  godmode/agentes/module_manager_editor.php: Added suport for ff
	  interval.

2012-02-03 Dario Rodriguez <dario.rodriguez@artica.es>

        * general/main_menu.php: Fixed godmode menu header visualization.

2012-02-03  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_snmp_alert_custom.php: Changed title.

2012-02-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Fixed a bug in flash charts due to
	my last commit.

2012-02-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/functions_visual_map.php: Improved module graphs on visual
	 console.

2012-02-02  Sancho Lerena <slerena@artica.es>

	* config_process.php: Updated build.

        * godmode/massive/massive_edit_modules.php: Fixed problem with export
        server target edition. "None" was missing.


2012-02-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* general/shortcut_bar.php: Fixed bug when the user doesn't have
	'LM' permissions.  

2012-02-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_api.php: Added get_alert_template function to 
	Api.

	Feature request: #3478217

2012-02-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* Changelog: I forgot to update Changelog.
	
2012-02-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
